# editor.py

./: .gitignore  README.md  pyproject.toml  tox.ini
src/: cursor.py  main.py  piece_table.py  terminal.py
tests/: test_main.py  test_piece_table.py
